--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "Shristi Pradhan website"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-#background:         'assets/img/placeholder-big.jpg'
+background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://shristipradhan.github.io
@@ -37,7 +37,7 @@ sass:
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:              shristi.pr@gmail.com
+#email:              shristi.pr@gmail.com
 #twitter:            username
 #facebook:           username
 github-url:         shristi-pradhan
