Add Vancouver view in background.

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "Shristi Pradhan website"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/ShristiPradhan.png'
-background-color:   #0fbfcf
+background:         'Vancouver-North-View.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://shristipradhan.github.io
