Add few images, update background.

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ description:        "Shristi Pradhan website"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/ShristiPradhan.png'
-background:         
-  color:            '#f8f8f8'
+background:         'assets/img/White-BG.jpg' 
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://shristipradhan.github.io
