Update email, google scholar user names.

--- a/_config.yml
+++ b/_config.yml
@@ -30,37 +30,17 @@ sass:
 
 # Social
 # if you don't have any of social below, comment the line.
-#google:
+google:
+  scholar:         shristi.pr@gmail.com
   #plus:            #username
   #analytics:
   #verify:
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:              shristi.pr@gmail.com
-#twitter:            username
-#facebook:           username
+email:              shristi.pr@gmail.com
 github-url:         shristi-pradhan
-#stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:           shristipradhan
-#xing:              username
-#instagram:          username
-#lastfm:            username
-#tumblr:            username
-#medium:            '@username'
-#pinterest:         username
-#foursquare:        username
-#steam:              username
-#dribbble:          username
-#youtube:           username
-#youtube-channel:   channel
-#soundcloud:        username
-#weibo:             username
-#flickr:            username
-#codepen:           username
-#keybase:           username
-#xmpp:              username@server.com
-#hackernews:        username
 
 # Gems
 gems:
