Update About and cover page.

--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,9 @@ sass:
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:              username
-github-url:         shristi-pradhan
+github-url:         shristipradhan
 linkedin:           shristipradhan
+email:              shristi.pr@gmail.com
 
 # Gems
 gems:
