Update config and about page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Shristi Pradhan
-bio:                'Welcome to my home page!'
+bio:                'Hello, World!'
 description:        "Shristi Pradhan website"
 reading_time:       true
 words_per_minute:   200
